tests/NormalTests/paczka1/fuzzy1/39031834.err
Error in line 2: A230 A230 2,2
Error in line 12: 14f S331 21,4
Error in line 9: y1yaSVREy A230 46,2
Error in line 13: 14f A230 76,0
Error in line 15: y1yaSVREy S331 79,5
Error in line 8: h20Di A974 84,1
Error in line 11: SmJSluOT0Ot A974 204,6
Error in line 25: SmJSluOT0Ot A230 27,6
Error in line 36: A230 S331 64,1
